# SPICE-Harvester

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.en.md  README.ko.md  README.md  TEST_ORGANIZATION_REPORT.md  TODO.md  api-exposure-map.html  class_inheritance.txt  codecov.yml  conftest.py  debug_conversion.py  debug_terminusdb_api.py  debug_terminusdb_endpoints.py  docker-compose.databases.yml  docker-compose.full.yml  docker-compose.kafka.yml  docker-compose.terminusdb.yml  foundry_connector_parity_report_2026-02-20.md  foundry_parity_reference.md  generate_architecture.py  mcp-config.json  otel-collector-config.yml  qa_bugs.json  qa_frontend_legacy_inventory.md  setup_metadata_schema.py  simple_class_test.py  test-mapping.md  test_english_only.py  test_improved_metadata.py  test_improved_structure.py  test_korean_labels.py  test_metadata_bypass.py  test_model_changes.py  (+5 more)
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  .srl  ARCHITECTURE_CORRECTION.md  CLAUDE_RULE_FIXES_REQUIRED.md  CLEANUP_LOG.md  COMPLEX_TYPES_TEST_README.md  CORS_QUICK_START.md  CQRS_VERIFICATION_COMPLETE.md  DATA_CONNECTOR_MIGRATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP_COMPLETE.md  ENVIRONMENT_VARIABLES.md  FINAL_TRUTH_REPORT.md  FINAL_VERIFICATION_REPORT.md  FIXED_GIT_FEATURES_SUMMARY.md  GRAPH_FEDERATION_SUMMARY.md  GRAPH_FEDERATION_TEST_REPORT.md  HTTPS_CONFIGURATION.md  HTTPS_IMPLEMENTATION_SUMMARY.md  ISSUES_FOUND_AND_FIXED.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_PROGRESS.md  MIGRATION_SUMMARY.md  MULTI_BRANCH_EXPERIMENT_DESIGN.md  PORT_CONFIGURATION.md  PRODUCTION_FEATURES_SUMMARY.md  PRODUCTION_MIGRATION_RUNBOOK.md  REAL_ISSUES_FOUND.md  REFACTORING_SUMMARY.md  SECURITY.md  TEST_CONSOLIDATION_PLAN.md  ULTRA_DIFF_SOLUTION.md  ULTRA_ISSUES_FOUND_20250814.md  add_lightweight_system_fields.py  add_palantir_system_fields.py  add_system_fields_direct.py  (+215 more)
backend/.artifacts/: release_regression_gate_report.json
backend/action_outbox_worker/: Dockerfile  __init__.py  main.py
backend/action_worker/: Dockerfile  __init__.py  governance.py  main.py  requirements.txt
backend/agent/: Dockerfile  main.py  models.py  models_pipeline.py  requirements.txt
backend/analysis/: system_analysis_results.json  system_improvement_analysis.py
backend/backend-for-frontend/: Dockerfile  dependencies.py  main.py  verify_implementation.py
backend/bff/: Dockerfile  __init__.py  dependencies.py  main.py  requirements.txt  verify_implementation.py
backend/connector_sync_worker/: Dockerfile  __init__.py  main.py  requirements.txt
backend/connector_trigger_service/: Dockerfile  __init__.py  main.py  requirements.txt
backend/docs/: API_RATE_LIMITING.md  OPENTELEMETRY_OBSERVABILITY.md  PIPELINE_AGENT.md  kafka_broker_config.md
backend/funnel/: Dockerfile  __init__.py  main.py  models.py  requirements.txt
backend/google_sheets_worker/: Dockerfile  __init__.py  main.py  requirements.txt
backend/ingest_reconciler_worker/: Dockerfile  __init__.py  main.py  requirements.txt
backend/instance_worker/: Dockerfile  __init__.py  main.py  requirements.txt
backend/legacy_archive_20250814_142608/: CLEANUP_REPORT.md
backend/mcp/: README.md  context7_development.py  mcp-config.docker.json  mcp_client.py  ontology_mcp_server.py  pipeline_mcp_server.py  terminus_mcp_server.py
backend/mcp_servers/: README.md  __init__.py  bff_auth.py  bff_sdk_mcp_server.py  context7_development.py  feature_helpers.py  mcp-config.docker.json  mcp_client.py  ontology_mcp_server.py  pipeline_mcp_errors.py  pipeline_mcp_helpers.py  pipeline_mcp_http.py  pipeline_mcp_rate_limit.py  pipeline_mcp_server.py  pipeline_mcp_tool_specs.py  terminus_mcp_server.py
backend/message_relay/: Dockerfile  main.py  requirements.txt
backend/monitoring/: alert_rules.yml  alertmanager.yml  grafana_dashboard.json  prometheus.yml  s3_event_store_dashboard.py
backend/objectify_worker/: Dockerfile  __init__.py  batch_loading.py  delta_processing.py  input_context.py  instance_validation.py  job_processing.py  key_constraint_scanning.py  lineage_helpers.py  link_index_processing.py  main.py  ontology_contracts.py  ontology_runtime.py  requirements.txt  runtime_helpers.py  runtime_mixin.py  validation_codes.py  write_paths.py
backend/oms/: Dockerfile  __init__.py  dependencies.py  dependencies_legacy_backup.py  exceptions.py  main.py  main_legacy_backup.py  requirements.txt  run_production_tests.sh  start_services.py  validation_codes.py
backend/ontology-management-service/: Dockerfile  PRODUCTION_TEST_README.md  __init__.py  dependencies.py  main.py  production_test_report_1752700568.json  requirements.txt  start_services.py
backend/ontology_worker/: Dockerfile  main.py  requirements.txt
backend/perf/: README.md  cleanup_perf_databases.py  run_k6_async_instance_flow.sh
backend/pipeline_scheduler/: Dockerfile  main.py
backend/pipeline_worker/: Dockerfile  downstream_enqueuing.py  execution_modes.py  execution_node_resolution.py  fk_validation.py  ingest_domain.py  input_loading.py  main.py  output_domain.py  output_preparation.py  output_publication.py  preview_sampling.py  requirements.txt  run_domain.py  runtime_mixin.py  spark_schema_helpers.py  spark_transform_engine.py  validation_domain.py  worker_helpers.py
backend/projection_worker/: Dockerfile  main.py  requirements.txt
backend/reports/: README.md  _audit_strict.out  _pytest_collect.out  _ruff_f401_f841.json  _vulture_100.out  runtime_ultra_audit_latest.json  runtime_ultra_audit_latest.md
backend/scripts/: Dockerfile.verify-imports  backfill_lineage.py  dependency_parsing.py  ghost_dependency_audit.py  import_performance_test.py  migrate_branch_master_to_main.py  platform_contract_audit.py  processed_event_registry_smoke.py  release_regression_gate.py  run_coverage_report.py  run_idempotency_chaos_tests.sh  runtime_ddl_audit.py  single_source_of_truth_audit.py  start_services.py  sync_agent_tool_allowlist.py  validate_environment.py  verify-imports.py  (+1 more)
(+2938 files in other folders)
