[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "spice-shared"
version = "0.1.0"
description = "Shared components for SPICE HARVESTER microservices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SPICE HARVESTER Team", email = "team@spiceharvester.io"}
]
keywords = ["spice", "harvester", "shared", "microservices"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ðŸŽ¯ SINGLE SOURCE OF TRUTH: ëª¨ë“  MSA ì„œë¹„ìŠ¤ì˜ ìœ ì¼í•œ ì˜ì¡´ì„± ì›ì²œ
# ì´ì „ ë¬¸ì œ: backend/pyproject.tomlê³¼ ê°œë³„ requirements.txtê°€ ì„œë¡œ ë‹¤ë¥¸ ë²„ì „ ìš”êµ¬ì‚¬í•­ ì •ì˜
# í•´ê²°: shared/pyproject.tomlì´ ëª¨ë“  ì™¸ë¶€ ë¼ì´ë¸ŒëŸ¬ë¦¬ ë²„ì „ì„ ì¤‘ì•™ì§‘ì¤‘ ê´€ë¦¬
dependencies = [
    # ðŸš€ Web Framework - MSA Core Stack
    "fastapi==0.104.1",        # í†µì¼ëœ ë²„ì „: BFF, OMS, Funnel ë“± ëª¨ë“  API ì„œë¹„ìŠ¤
    "uvicorn[standard]==0.24.0", # ASGI ì„œë²„ - ê°œë°œ/í”„ë¡œë•ì…˜ í™˜ê²½ ì¼ê´€ì„±
    "httpx==0.25.2",           # HTTP í´ë¼ì´ì–¸íŠ¸ - ì„œë¹„ìŠ¤ ê°„ í†µì‹ 
    
    # ðŸ“‹ Data Validation & Settings
    "pydantic==2.5.0",         # ë°ì´í„° ê²€ì¦ - ëª¨ë“  ì„œë¹„ìŠ¤ ê³µí†µ
    "pydantic-settings==2.1.0", # ì„¤ì • ê´€ë¦¬
    "python-dotenv==1.0.0",    # í™˜ê²½ë³€ìˆ˜ ë¡œë”©
    
    # ðŸ—„ï¸ Database & Caching - GHOST DEPENDENCY RESOLVED
    "redis[hiredis]==5.0.1",   # âœ… RedisService - ëª¨ë“  ì›Œì»¤ì—ì„œ ì‚¬ìš©
    "elasticsearch==8.11.0",   # âœ… ElasticsearchService - ê²€ìƒ‰ ë° ì¸ë±ì‹±
    "asyncpg==0.29.0",        # âœ… PostgreSQL ë¹„ë™ê¸° ë“œë¼ì´ë²„ - ëª¨ë“  ì›Œì»¤
    "aiosqlite==0.19.0",      # SQLite ë¹„ë™ê¸° ë“œë¼ì´ë²„ - ê°œë°œ/í…ŒìŠ¤íŠ¸
    
    # ðŸ“¬ Message Queue - GHOST DEPENDENCY RESOLVED  
    "confluent-kafka==2.3.0", # âœ… ëª¨ë“  ì›Œì»¤ ì„œë¹„ìŠ¤ì˜ ë©”ì‹œì§€ í ì²˜ë¦¬
    
    # ðŸ§  Graph Database - GHOST DEPENDENCY RESOLVED
    "terminusdb-client==10.2.0", # âœ… ì˜¨í†¨ë¡œì§€/ì¸ìŠ¤í„´ìŠ¤ ì›Œì»¤ì˜ ê·¸ëž˜í”„ DB ì—°ê²°
    
    # â˜ï¸ Storage - GHOST DEPENDENCY RESOLVED
    "boto3==1.34.14",         # âœ… S3 ìŠ¤í† ë¦¬ì§€ ì„œë¹„ìŠ¤
    "botocore==1.34.14",      # boto3 ì½”ì–´ ì˜ì¡´ì„±
    
    # ðŸ” Authentication & Security
    "python-jose[cryptography]==3.3.0", # JWT í† í° ì²˜ë¦¬
    "passlib[bcrypt]==1.7.4",  # íŒ¨ìŠ¤ì›Œë“œ í•´ì‹±
    "bcrypt==4.1.1",          # ì•”í˜¸í™” ë¼ì´ë¸ŒëŸ¬ë¦¬
    
    # ðŸŒ HTTP & File Handling
    "python-multipart==0.0.6", # ë©€í‹°íŒŒíŠ¸ í¼ ë°ì´í„° ì²˜ë¦¬
    "aiofiles==23.2.1",       # ë¹„ë™ê¸° íŒŒì¼ ì²˜ë¦¬
    
    # ðŸ“Š Data Processing
    "pandas==2.1.3",          # ë°ì´í„° ë¶„ì„ - Funnel ì„œë¹„ìŠ¤ ë“±
    "numpy==1.24.3",          # ìˆ˜ì¹˜ ê³„ì‚°
    "openpyxl==3.1.2",        # Excel íŒŒì¼ ì²˜ë¦¬
    
    # ðŸ” Validation - CONDITIONAL IMPORT RESOLVED
    "email-validator==2.0.0",  # âœ… ì´ë©”ì¼ ê²€ì¦ - ì¡°ê±´ë¶€ ìž„í¬íŠ¸ ì œê±°ë¨
    "phonenumbers==8.13.0",   # âœ… ì „í™”ë²ˆí˜¸ ê²€ì¦ - ì¡°ê±´ë¶€ ìž„í¬íŠ¸ ì œê±°ë¨
    
    # ðŸ”— Google APIs
    "google-auth==2.27.0",
    "google-auth-oauthlib==1.2.0", 
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.116.0",
    
    # ðŸ“ Logging
    "python-json-logger==2.0.7", # êµ¬ì¡°í™”ëœ ë¡œê¹…
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
]

# Test dependencies
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1", 
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",  # ëª¨í‚¹ ë¼ì´ë¸ŒëŸ¬ë¦¬
    "faker==20.1.0",        # í…ŒìŠ¤íŠ¸ ë°ì´í„° ìƒì„±
]

# Documentation dependencies
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.2",
]

[project.urls]
Homepage = "https://github.com/spiceharvester/backend"
Documentation = "https://docs.spiceharvester.io"
Repository = "https://github.com/spiceharvester/backend"
Issues = "https://github.com/spiceharvester/backend/issues"

[tool.setuptools]
packages = ["shared"]

[tool.setuptools.package-data]
shared = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--ignore=docs",
    "--ignore=setup.py",
    "--cov=shared",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["shared"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]